[gd_scene load_steps=3 format=3 uid="uid://cvfj1u0abat0c"]

[ext_resource type="Script" path="res://scripts/NewChartDialog.gd" id="1_wnarv"]
[ext_resource type="Texture2D" uid="uid://hglmysmnb6hn" path="res://assets/folder.png" id="2_vhno8"]

[node name="Base" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wnarv")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_right = 1142.0
offset_bottom = 31.0

[node name="TitleLabel" type="Label" parent="VBoxContainer/TitleContainer"]
offset_top = 2.0
offset_right = 43.0
offset_bottom = 28.0
text = "Title: "

[node name="Title" type="LineEdit" parent="VBoxContainer/TitleContainer"]
unique_name_in_owner = true
offset_left = 47.0
offset_right = 1142.0
offset_bottom = 31.0
size_flags_horizontal = 3
alignment = 1
caret_blink = true
caret_blink_interval = 0.5

[node name="ArtistContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 35.0
offset_right = 1142.0
offset_bottom = 66.0

[node name="ArtistLabel" type="Label" parent="VBoxContainer/ArtistContainer"]
offset_top = 2.0
offset_right = 51.0
offset_bottom = 28.0
text = "Artist: "

[node name="Artist" type="LineEdit" parent="VBoxContainer/ArtistContainer"]
unique_name_in_owner = true
offset_left = 55.0
offset_right = 1142.0
offset_bottom = 31.0
size_flags_horizontal = 3
alignment = 1
caret_blink = true
caret_blink_interval = 0.5

[node name="AudioContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 70.0
offset_right = 1142.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="AudioLabel" type="Label" parent="VBoxContainer/AudioContainer"]
offset_top = 6.0
offset_right = 54.0
offset_bottom = 32.0
text = "Audio: "

[node name="AudioPath" type="LineEdit" parent="VBoxContainer/AudioContainer"]
unique_name_in_owner = true
offset_left = 58.0
offset_right = 1080.0
offset_bottom = 38.0
size_flags_horizontal = 3
editable = false
caret_blink = true
caret_blink_interval = 0.5

[node name="AudioButton" type="Button" parent="VBoxContainer/AudioContainer"]
custom_minimum_size = Vector2i(50, 0)
offset_left = 1084.0
offset_right = 1142.0
offset_bottom = 38.0
icon = ExtResource("2_vhno8")

[node name="AudioFilePrompt" type="FileDialog" parent="VBoxContainer/AudioContainer/AudioButton"]
unique_name_in_owner = true
title = "Open a File"
position = Vector2i(50, 50)
size = Vector2i(1000, 500)
ok_button_text = "Open"
file_mode = 0
access = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 112.0
offset_right = 1142.0
offset_bottom = 143.0
alignment = 1

[node name="Cancel" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 509.0
offset_right = 569.0
offset_bottom = 31.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Cancel"

[node name="Confirm" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 573.0
offset_right = 633.0
offset_bottom = 31.0
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Create"

[connection signal="button_down" from="VBoxContainer/AudioContainer/AudioButton" to="." method="_on_audio_button_button_down"]
[connection signal="file_selected" from="VBoxContainer/AudioContainer/AudioButton/AudioFilePrompt" to="." method="_on_audio_file_prompt_file_selected"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Cancel" to="." method="_on_cancel_pressed"]
[connection signal="button_down" from="VBoxContainer/HBoxContainer/Confirm" to="." method="_on_confirm_button_down"]
